res/examples/valid/call_callable_fn_stmt.eg
fn sum (a: number, b: number): number => {
    a + b
}

sum(1, 2);