res/examples/invalid/call_fn_expr_with_too_many_args.eg
let sum = (a: number, b: number): number => { a + b };

sum(10, 100, 1000);

// out: TypeError: expects 2 arguments but received 3